--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "google-auth-library": "^6.0.6",
     "jsonwebtoken": "^8.5.1",
     "mysql": "^2.18.1",
+    "nodemailer": "^6.6.2",
+    "nodemailer-pug-engine": "^2.0.1",
     "pug": "^3.0.0"
   }
 }
